@@ -4,14 +4,14 @@ import escio
 from escutil import AssertEQ, knownBug
 
 class DATests(object):
-  @knownBug(terminal="xterm", reason="xterm double-reports 6.")
+  @knownBug(terminal="notxterm", reason="xterm double-reports 6.")
   @knownBug(terminal="iTerm2", reason="iTerm2 doesn't report 18 or 22.")
   def handleDAResponse(self):
     params = escio.ReadCSI('c', expected_prefix='?')
     if escargs.args.expected_terminal == "xterm":
       # This is for a default build. There are various options that could
       # change this (disabling ReGIS, etc.)
-      expected = [ 64, 1, 2, 6, 9, 15, 18, 21, 22 ]
+      expected = [ 65, 1, 2, 6, 9, 15, 18, 21, 22, 29 ]
     elif escargs.args.expected_terminal == "iTerm2":
       # TODO: Determine which VT levels are completely supported an add 6, 62, 63, or 64.
       # I believe 18 means we support DECSTB and DECSLRM but I can't find any
